k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techsalary-ingress
  namespace: techsalary
spec:
  ingressClassName: nginx
  rules:
    - host: 104.210.56.201.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gatewayapi
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
